--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -1,36 +1,31 @@
-name: LP Logger (daily JST)
+name: LP Logger
 
 on:
   schedule:
-    # GitHub Actions は UTC で動きます。00:00 JST = 15:00 UTC 前日
-    - cron: "0 15 * * *"   # 毎日 00:00 JST に1回実行
+    - cron: "0 * * * *"   # 毎時実行
   workflow_dispatch:       # 手動実行も可能
 
 jobs:
-  run:
+  run-logger:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v3
 
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v4
         with:
           python-version: "3.10"
 
       - name: Install dependencies
-        run: |
-          pip install requests web3 pandas matplotlib
+        run: pip install web3
 
-      - name: Run script
+      - name: Run logger
         run: python lp_logger.py
-        env:
-          HYPE_RPC: ${{ secrets.HYPE_RPC }}
 
       - name: Commit results
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add lp_history.csv lp_value_*.png
-          git commit -m "Update LP history & graph (JST daily) [skip ci]" || echo "No changes to commit"
+          git config --global user.name "github-actions"
+          git config --global user.email "github-actions@github.com"
+          git add lp_history.csv
+          git commit -m "update LP history" || echo "No changes"
           git push
