--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -3,7 +3,7 @@ name: LP Logger
 on:
   schedule:
     - cron: "0 * * * *"   # 毎時実行
-  workflow_dispatch:      # 手動実行も可能
+  workflow_dispatch:       # 手動実行も可能
 
 jobs:
   run-logger:
@@ -17,7 +17,9 @@ jobs:
           python-version: "3.10"
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
       - name: Run logger
         run: python lp_logger.py
